--- a/numpy/numpy-I-intro-numpy.ipynb
+++ b/numpy/numpy-I-intro-numpy.ipynb
@@ -12,6 +12,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -27,10 +36,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8, 7, 5, 1, 6])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array1d = np.random.randint(0, 10, 5)\n",
+    "array1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 2, 6],\n",
+       "       [4, 7, 3]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array2d = np.random.randint(0, 10, (2, 3))\n",
+    "array2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[3, 5, 6, 9, 4],\n",
+       "        [9, 0, 7, 1, 8],\n",
+       "        [3, 6, 3, 5, 1]],\n",
+       "\n",
+       "       [[1, 8, 5, 7, 4],\n",
+       "        [9, 6, 7, 4, 5],\n",
+       "        [2, 1, 9, 8, 8]]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array3d = np.random.randint(0, 10, (2, 3, 5))\n",
+    "array3d"
+   ]
   },
   {
    "attachments": {},
@@ -42,10 +114,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def propiedades(array):\n",
+    "    print(f'forma: {array.shape}')\n",
+    "    print(f'tamaño: {array.size}')\n",
+    "    print(f'número de dimensiones: {array.ndim}')\n",
+    "    print(f'typo de dato: {array.dtype}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forma: (5,)\n",
+      "tamaño: 5\n",
+      "número de dimensiones: 1\n",
+      "typo de dato: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "propiedades(array1d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forma: (2, 3)\n",
+      "tamaño: 6\n",
+      "número de dimensiones: 2\n",
+      "typo de dato: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "propiedades(array2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forma: (2, 3, 5)\n",
+      "tamaño: 30\n",
+      "número de dimensiones: 3\n",
+      "typo de dato: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "propiedades(array3d)"
+   ]
   },
   {
    "attachments": {},
@@ -57,10 +195,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_id = np.identity(3)\n",
+    "matriz_id"
+   ]
   },
   {
    "attachments": {},
@@ -72,28 +226,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1]],\n",
+       "\n",
+       "       [[1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1]]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_ones_l = np.ones_like(array3d)\n",
+    "array_ones_l"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Es el momento de hacer algunas operaciones entre arrays  \n",
+    "    - ¿Se puede sumar el array de dos dimensiones que creamos en el primer ejecicios a la matriz identidad? ¿Por qué?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 2, 6],\n",
+       "       [4, 7, 3]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3) (3,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m suma \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49madd(array2d, matriz_id)\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (3,3) "
+     ]
+    }
+   ],
+   "source": [
+    "suma = np.add(array2d, matriz_id)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- En caso de que no se puedan sumar, busca una solución para sumar una matriz identidad a otra. La solución puede ser crear un array nuevo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13, 15, 17],\n",
+       "       [16, 18, 17],\n",
+       "       [11, 18, 14]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz2 = np.random.randint(10, 20, (3, 3))\n",
+    "matriz2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14., 15., 17.],\n",
+       "       [16., 19., 17.],\n",
+       "       [11., 18., 15.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma2 = np.add(matriz2, matriz_id)\n",
+    "suma2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Multiplicad la matriz identidad por la nueva matriz que os creasteis en el ejercicio anterior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13.,  0.,  0.],\n",
+       "       [ 0., 18.,  0.],\n",
+       "       [ 0.,  0., 14.]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiplicacion = np.multiply(matriz2, matriz_id)\n",
+    "multiplicacion"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Es el momento de hacer algunas operaciones entre arrays  \n",
-    "    - ¿Se puede sumar el array de dos dimensiones que creamos en el primer ejecicios a la matriz identidad? ¿Por qué?\n",
-    "    - En caso de que no se puedan sumar, busca una solución para sumar una matriz identidad a otra. La solución puede ser crear un array nuevo.\n",
-    "    - Multiplicad la matriz identidad por la nueva matriz que os creasteis en el ejercicio anterior.\n",
-    "    - Dividid las dos matricess"
+    "- Dividid las dos matricess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1546/3874293228.py:1: RuntimeWarning: divide by zero encountered in divide\n",
+      "  division = np.divide(matriz2, matriz_id)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[13., inf, inf],\n",
+       "       [inf, 18., inf],\n",
+       "       [inf, inf, 14.]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "division = np.divide(matriz2, matriz_id)\n",
+    "division"
+   ]
   }
  ],
  "metadata": {
@@ -103,8 +455,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.6.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
