platilla pandas II, formato titulos y carpeta datos

--- a/numpy/numpy-I-intro-numpy.ipynb
+++ b/numpy/numpy-I-intro-numpy.ipynb
@@ -5,10 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Ejercicios de pair programming Módulo 2 - Sprint 1**\n",
-    "## **NumPy I - Introducción a NumPy**\n",
-    "\n",
-    "---"
+    "# Pair Programming NumPy I"
    ]
   },
   {
@@ -321,7 +318,7 @@
     }
    ],
    "source": [
-    "suma = np.add(array2d, matriz_id)"
+    "suma = np.add(array2d, matriz_id) # No se pueden sumar porque no tienen la misma forma"
    ]
   },
   {
