--- a/pandas/Pandas-I-dataframes-series.ipynb
+++ b/pandas/Pandas-I-dataframes-series.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,23 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "lunes        44\n",
+       "lunes        43\n",
        "martes        3\n",
-       "miercoles    15\n",
-       "jueves       41\n",
-       "viernes      32\n",
-       "sabado        9\n",
-       "domingo      33\n",
+       "miercoles    17\n",
+       "jueves       23\n",
+       "viernes      37\n",
+       "sabado       48\n",
+       "domingo      20\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'lunes': 44, 'martes': 3, 'miercoles': 15, 'jueves': 41, 'viernes': 32, 'sabado': 9, 'domingo': 33}\n"
+      "{'lunes': 43, 'martes': 3, 'miercoles': 17, 'jueves': 23, 'viernes': 37, 'sabado': 48, 'domingo': 20}\n"
      ]
     }
    ],
@@ -139,23 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "lunes        44\n",
+       "lunes        43\n",
        "martes        3\n",
-       "miercoles    15\n",
-       "jueves       41\n",
-       "viernes      32\n",
-       "sabado        9\n",
-       "domingo      33\n",
+       "miercoles    17\n",
+       "jueves       23\n",
+       "viernes      37\n",
+       "sabado       48\n",
+       "domingo      20\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
       "Los indices son: Index(['lunes', 'martes', 'miercoles', 'jueves', 'viernes', 'sabado',\n",
       "       'domingo'],\n",
       "      dtype='object')\n",
-      "Los valores son: [44  3 15 41 32  9 33]\n"
+      "Los valores son: [43  3 17 23 37 48 20]\n"
      ]
     }
    ],
@@ -222,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "44"
+       "43"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,19 +242,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "lunes        44\n",
+       "lunes        43\n",
        "martes        3\n",
-       "miercoles    15\n",
+       "miercoles    17\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,18 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "lunes      44\n",
-       "domingo    33\n",
+       "lunes      43\n",
+       "domingo    20\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,19 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3, 0, 1],\n",
-       "       [6, 2, 3],\n",
-       "       [7, 2, 4],\n",
-       "       [9, 0, 1]])"
+       "array([[7, 5, 6],\n",
+       "       [7, 4, 2],\n",
+       "       [5, 3, 8],\n",
+       "       [4, 2, 6]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -359,27 +359,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -387,13 +387,13 @@
       ],
       "text/plain": [
        "   España  Francia  Italia\n",
-       "0       3        0       1\n",
-       "1       6        2       3\n",
-       "2       7        2       4\n",
-       "3       9        0       1"
+       "0       7        5       6\n",
+       "1       7        4       2\n",
+       "2       5        3       8\n",
+       "3       4        2       6"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -533,13 +533,13 @@
        "Corea del Norte          10    91    120     235"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = pd.read_csv(\"medallas.csv\", index_col=[\"País\"])\n",
+    "df2 = pd.read_csv(\"datos/medallas.csv\", index_col=[\"País\"])\n",
     "df2"
    ]
   },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "Name: Tailandia, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "Irán            4   179    181     197"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "Irán    179    181     197"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "Name: India, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "Corea del Norte          10    91    120     235"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "Corea del Norte    91    120     235"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "Corea del Sur           3   745    663     827"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        "Japón           2  1032   1037     985"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
        "Corea del Sur           3   745    663     827"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
        "Corea del Norte    91    120     235"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1458,7 @@
        "Corea del Norte    91    120     235    446"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
