--- a/pandas/Pandas-II-carga-y-guardado-datos.ipynb
+++ b/pandas/Pandas-II-carga-y-guardado-datos.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,38 +555,431 @@
     "\n",
     "    Usando el método `read_clipboard`, cread un dataframe nuevo que nos ayude a contestar las siguientes preguntas:  \n",
     "\n",
-    "    - Usando el iloc, ¿Cuál es la temperatura mínima de Febrero? ¿Y la máxima?  \n",
-    "\n",
-    "    - Usando el loc, ¿Cuántas horas de sol hay en Julio? ¿Y en Diciembre?  \n",
-    "\n",
-    "    - Usando el iloc, ¿Cuál fue la húmedad del mes de Septiembre? ¿Y la precipitación?  \n",
-    "\n",
-    "    - Estos datos corresponden a los años 1991-2021. Cread una nueva columna cuyo valor sea \"1991-2021\".    "
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'utf-8' codec can't decode byte 0xf8 in position 113: invalid start byte",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1901/3181904230.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_clipboard\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/io/clipboards.py\u001b[0m in \u001b[0;36mread_clipboard\u001b[0;34m(sep, **kwargs)\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparsers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mread_csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m     \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclipboard_get\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;31m# Try to decode (if needed, as \"text\" might already be a string here).\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/io/clipboard/__init__.py\u001b[0m in \u001b[0;36mlazy_load_stub_paste\u001b[0;34m()\u001b[0m\n\u001b[1;32m    653\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpaste\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    654\u001b[0m     \u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpaste\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdetermine_clipboard\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 655\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mpaste\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    656\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    657\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/io/clipboard/__init__.py\u001b[0m in \u001b[0;36mpaste_wsl\u001b[0;34m()\u001b[0m\n\u001b[1;32m    496\u001b[0m         \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommunicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    497\u001b[0m         \u001b[0;31m# WSL appends \"\\r\\n\" to the contents.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 498\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mENCODING\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    499\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    500\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mcopy_wsl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpaste_wsl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xf8 in position 113: invalid start byte"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Enero</th>\n",
+       "      <th>Febrero</th>\n",
+       "      <th>Marzo</th>\n",
+       "      <th>Abril</th>\n",
+       "      <th>Mayo</th>\n",
+       "      <th>Junio</th>\n",
+       "      <th>​​Julio</th>\n",
+       "      <th>Agosto</th>\n",
+       "      <th>Septiembre</th>\n",
+       "      <th>Octubre</th>\n",
+       "      <th>Noviembre</th>\n",
+       "      <th>Diciembre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Temperatura media (°C)</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25.6</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>5.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperatura min. (°C)</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperatura máx. (°C)</th>\n",
+       "      <td>9.5</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>22.6</td>\n",
+       "      <td>29</td>\n",
+       "      <td>32.4</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>10.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Precipitación (mm)</th>\n",
+       "      <td>41</td>\n",
+       "      <td>34</td>\n",
+       "      <td>40</td>\n",
+       "      <td>47</td>\n",
+       "      <td>39</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>22</td>\n",
+       "      <td>61</td>\n",
+       "      <td>55</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Humedad(%)</th>\n",
+       "      <td>77%</td>\n",
+       "      <td>69%</td>\n",
+       "      <td>60%</td>\n",
+       "      <td>57%</td>\n",
+       "      <td>48%</td>\n",
+       "      <td>35%</td>\n",
+       "      <td>28%</td>\n",
+       "      <td>30%</td>\n",
+       "      <td>41%</td>\n",
+       "      <td>60%</td>\n",
+       "      <td>72%</td>\n",
+       "      <td>77%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Días lluviosos (días)</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Horas de sol (horas)</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Enero Febrero Marzo Abril  Mayo Junio ​​Julio Agosto  \\\n",
+       "Temperatura media (°C)   4.8       6   9.2  12.2  16.7  22.8      26   25.6   \n",
+       "Temperatura min. (°C)    0.9     1.4   3.8   6.4  10.3  15.7    18.8   18.5   \n",
+       "Temperatura máx. (°C)    9.5    11.4    15  17.9  22.6    29    32.4   31.9   \n",
+       "Precipitación (mm)        41      34    40    47    39    16       6      8   \n",
+       "Humedad(%)               77%     69%   60%   57%   48%   35%     28%    30%   \n",
+       "Días lluviosos (días)      5       4     4     6     5     3       1      2   \n",
+       "Horas de sol (horas)     5.7     6.8   8.1   9.4  11.5  13.0    13.1   12.1   \n",
+       "\n",
+       "                       Septiembre Octubre Noviembre Diciembre  \n",
+       "Temperatura media (°C)       20.9    15.1       8.6       5.5  \n",
+       "Temperatura min. (°C)        14.8    10.2       4.7       1.8  \n",
+       "Temperatura máx. (°C)        26.8    20.3      13.2      10.1  \n",
+       "Precipitación (mm)             22      61        55        46  \n",
+       "Humedad(%)                    41%     60%       72%       77%  \n",
+       "Días lluviosos (días)           3       5         5         5  \n",
+       "Horas de sol (horas)         10.4     7.8       6.1       5.7  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df2 = pd.read_clipboard()\n",
     "df2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Usando el iloc, ¿Cuál es la temperatura mínima de Febrero? ¿Y la máxima?  \n",
+    "\n",
+    "- Usando el loc, ¿Cuántas horas de sol hay en Julio? ¿Y en Diciembre?  \n",
+    "\n",
+    "- Usando el iloc, ¿Cuál fue la húmedad del mes de Septiembre? ¿Y la precipitación?  \n",
+    "\n",
+    "- Estos datos corresponden a los años 1991-2021. Cread una nueva columna cuyo valor sea \"1991-2021\". "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La temperatura mínima de febrero es: 1.4\n",
+      "La temperatura máxima de febrero es: 11.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"La temperatura mínima de febrero es: {df2.iloc[1,1]}\")\n",
+    "print(f\"La temperatura máxima de febrero es: {df2.iloc[2,1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', '​​Julio',\n",
+       "       'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "En julio hay 13.1 horas de sol\n",
+      "En diciembre hay 5.7 horas de sol\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"En julio hay {df2.loc['Horas de sol (horas)','​​Julio']} horas de sol\")\n",
+    "print(f\"En diciembre hay {df2.loc['Horas de sol (horas)','Diciembre']} horas de sol\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La humedad en septiembre es: 41% y la precipitacion es 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"La humedad en septiembre es: {df2.iloc[4,8]} y la precipitacion es {df2.iloc[3,8]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Enero</th>\n",
+       "      <th>Febrero</th>\n",
+       "      <th>Marzo</th>\n",
+       "      <th>Abril</th>\n",
+       "      <th>Mayo</th>\n",
+       "      <th>Junio</th>\n",
+       "      <th>​​Julio</th>\n",
+       "      <th>Agosto</th>\n",
+       "      <th>Septiembre</th>\n",
+       "      <th>Octubre</th>\n",
+       "      <th>Noviembre</th>\n",
+       "      <th>Diciembre</th>\n",
+       "      <th>Año</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Temperatura media (°C)</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25.6</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>1991-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperatura min. (°C)</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1991-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperatura máx. (°C)</th>\n",
+       "      <td>9.5</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>22.6</td>\n",
+       "      <td>29</td>\n",
+       "      <td>32.4</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>1991-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Precipitación (mm)</th>\n",
+       "      <td>41</td>\n",
+       "      <td>34</td>\n",
+       "      <td>40</td>\n",
+       "      <td>47</td>\n",
+       "      <td>39</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>22</td>\n",
+       "      <td>61</td>\n",
+       "      <td>55</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1991-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Humedad(%)</th>\n",
+       "      <td>77%</td>\n",
+       "      <td>69%</td>\n",
+       "      <td>60%</td>\n",
+       "      <td>57%</td>\n",
+       "      <td>48%</td>\n",
+       "      <td>35%</td>\n",
+       "      <td>28%</td>\n",
+       "      <td>30%</td>\n",
+       "      <td>41%</td>\n",
+       "      <td>60%</td>\n",
+       "      <td>72%</td>\n",
+       "      <td>77%</td>\n",
+       "      <td>1991-2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Enero Febrero Marzo Abril  Mayo Junio ​​Julio Agosto  \\\n",
+       "Temperatura media (°C)   4.8       6   9.2  12.2  16.7  22.8      26   25.6   \n",
+       "Temperatura min. (°C)    0.9     1.4   3.8   6.4  10.3  15.7    18.8   18.5   \n",
+       "Temperatura máx. (°C)    9.5    11.4    15  17.9  22.6    29    32.4   31.9   \n",
+       "Precipitación (mm)        41      34    40    47    39    16       6      8   \n",
+       "Humedad(%)               77%     69%   60%   57%   48%   35%     28%    30%   \n",
+       "\n",
+       "                       Septiembre Octubre Noviembre Diciembre        Año  \n",
+       "Temperatura media (°C)       20.9    15.1       8.6       5.5  1991-2021  \n",
+       "Temperatura min. (°C)        14.8    10.2       4.7       1.8  1991-2021  \n",
+       "Temperatura máx. (°C)        26.8    20.3      13.2      10.1  1991-2021  \n",
+       "Precipitación (mm)             22      61        55        46  1991-2021  \n",
+       "Humedad(%)                    41%     60%       72%       77%  1991-2021  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"Año\"] = (\"1991-2021\")\n",
+    "\n",
+    "df2.head()"
    ]
   },
   {
@@ -598,10 +991,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df2.to_csv('datos/clima.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_excel('datos/clima.xlsx')"
+   ]
   }
  ],
  "metadata": {
