numpy III y plantilla pandas IV

--- a/numpy/numpy-III-operaciones-estadisticas.ipynb
+++ b/numpy/numpy-III-operaciones-estadisticas.ipynb
@@ -9,24 +9,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta lección hemps aprendido algunas de las operaciones matemáticas más importantes que podemos aplicar a un array. Hoy pondremos en práctica algunas de estas operaciones, además de recordar algunas de los métodos aprendidos en otras lecciones y recordar como podemos iterar por un array.  \n",
+    "En esta lección hemos aprendido algunas de las operaciones matemáticas más importantes que podemos aplicar a un array. Hoy pondremos en práctica algunas de estas operaciones, además de recordar algunas de los métodos aprendidos en otras lecciones y recordar como podemos iterar por un array.  \n",
     "1. Cread un array de tres dimensiones de 2 matrices, 3 filas y 5 columnas cuyos valores solo tengan 1 decimales."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.3, 0.3, 0.1, 0.8, 0.8],\n",
+       "        [1. , 0.4, 0.2, 0.1, 0.3],\n",
+       "        [0.7, 0.8, 0.5, 0.3, 0.7]],\n",
+       "\n",
+       "       [[1. , 0.6, 0.1, 0.7, 0.3],\n",
+       "        [0.4, 0.4, 0.7, 0.3, 0.4],\n",
+       "        [0.6, 0.3, 0.8, 0.6, 0.1]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "array1 = np.random.rand(2,3,5).round(1)\n",
+    "array1"
+   ]
   },
   {
    "attachments": {},
@@ -38,14 +63,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "media = np.mean(array1).round(1)\n",
+    "media"
+   ]
   },
   {
    "attachments": {},
@@ -57,14 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "maximo = np.max(array1).round(1)\n",
+    "maximo"
+   ]
   },
   {
    "attachments": {},
@@ -76,14 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "minimo = np.min(array1).round(1)\n",
+    "minimo"
+   ]
   },
   {
    "attachments": {},
@@ -124,14 +179,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['', '', '', '', ''],\n",
+       "        ['', '', '', '', ''],\n",
+       "        ['', '', '', '', '']],\n",
+       "\n",
+       "       [['', '', '', '', ''],\n",
+       "        ['', '', '', '', ''],\n",
+       "        ['', '', '', '', '']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "vacio = np.empty((2,3,5), dtype=str)\n",
+    "vacio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['C', 'C', 'E', 'B', 'B'],\n",
+       "        ['D', 'C', 'C', 'E', 'C'],\n",
+       "        ['B', 'B', 'A', 'C', 'B']],\n",
+       "\n",
+       "       [['D', 'B', 'E', 'B', 'C'],\n",
+       "        ['C', 'C', 'B', 'C', 'C'],\n",
+       "        ['B', 'C', 'B', 'B', 'E']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for indice_mat, matriz in enumerate(array1):\n",
+    "    for indice_fila, fila in enumerate(matriz):\n",
+    "        for indice_col, columna in enumerate(fila):\n",
+    "            if array1[indice_mat,indice_fila, indice_col] == np.mean(array1).round(1):\n",
+    "                vacio[indice_mat,indice_fila, indice_col] = 'A'\n",
+    "            elif array1[indice_mat,indice_fila, indice_col] > np.mean(array1):\n",
+    "                vacio[indice_mat,indice_fila, indice_col] = 'B'\n",
+    "            elif array1[indice_mat,indice_fila, indice_col] < np.mean(array1):\n",
+    "                vacio[indice_mat,indice_fila, indice_col] = 'C'\n",
+    "            if array1[indice_mat,indice_fila, indice_col] == np.max(array1):\n",
+    "                vacio[indice_mat,indice_fila, indice_col] = 'D'\n",
+    "            elif array1[indice_mat,indice_fila, indice_col] == np.min(array1):\n",
+    "                vacio[indice_mat,indice_fila, indice_col] = 'E'\n",
+    "vacio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# otra posible solución:\n",
+    "vacio2 = np.empty((2,3,5), dtype=str)\n",
+    "vacio2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['C', 'C', 'E', 'B', 'B'],\n",
+       "        ['D', 'C', 'C', 'E', 'C'],\n",
+       "        ['B', 'B', 'A', 'C', 'B']],\n",
+       "\n",
+       "       [['D', 'B', 'E', 'B', 'C'],\n",
+       "        ['C', 'C', 'B', 'C', 'C'],\n",
+       "        ['B', 'C', 'B', 'B', 'E']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for indice_mat in range(vacio2.shape[0]):\n",
+    "    for indice_fila in range(vacio2.shape[1]):\n",
+    "        for indice_col in range(vacio2.shape[2]):\n",
+    "            if array1[indice_mat,indice_fila, indice_col] == np.mean(array1).round(1):\n",
+    "                vacio2[indice_mat,indice_fila, indice_col] = 'A'\n",
+    "            elif array1[indice_mat,indice_fila, indice_col] > np.mean(array1):\n",
+    "                vacio2[indice_mat,indice_fila, indice_col] = 'B'\n",
+    "            elif array1[indice_mat,indice_fila, indice_col] < np.mean(array1):\n",
+    "                vacio2[indice_mat,indice_fila, indice_col] = 'C'\n",
+    "            if array1[indice_mat,indice_fila, indice_col] == np.max(array1):\n",
+    "                vacio2[indice_mat,indice_fila, indice_col] = 'D'\n",
+    "            elif array1[indice_mat,indice_fila, indice_col] == np.min(array1):\n",
+    "                vacio2[indice_mat,indice_fila, indice_col] = 'E'\n",
+    "vacio2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,14 +320,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '',\n",
+       "       '', '', '', '', '', '', '', '', '', '', '', '', ''], dtype='<U1')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "array2 = np.empty(30, str)\n",
+    "array2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['', '', '', '', ''],\n",
+       "        ['', '', '', '', ''],\n",
+       "        ['', '', '', '', '']],\n",
+       "\n",
+       "       [['', '', '', '', ''],\n",
+       "        ['', '', '', '', ''],\n",
+       "        ['', '', '', '', '']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array2_3d = array2.reshape(2,3,5)\n",
+    "array2_3d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['2', '2', '3', '1', '1'],\n",
+       "        ['2', '2', '2', '3', '2'],\n",
+       "        ['1', '1', '1', '2', '1']],\n",
+       "\n",
+       "       [['2', '1', '3', '1', '2'],\n",
+       "        ['2', '2', '1', '2', '2'],\n",
+       "        ['1', '2', '1', '1', '3']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for indice_mat, matriz in enumerate(array2_3d):\n",
+    "    for indice_fila, fila in enumerate(matriz):\n",
+    "        for indice_col, columna in enumerate(fila):\n",
+    "            if vacio[indice_mat, indice_fila, indice_col] == 'A' or vacio[indice_mat, indice_fila, indice_col] == 'B':\n",
+    "                array2_3d[indice_mat, indice_fila, indice_col] = 1\n",
+    "            elif vacio[indice_mat,indice_fila, indice_col] == 'C' or vacio[indice_mat, indice_fila, indice_col] == 'D':\n",
+    "                array2_3d[indice_mat, indice_fila, indice_col] = 2\n",
+    "            elif vacio[indice_mat,indice_fila, indice_col] == 'E':\n",
+    "                array2_3d[indice_mat, indice_fila, indice_col] = 3\n",
+    "array2_3d"
+   ]
   }
  ],
  "metadata": {
@@ -175,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
